--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
     <div class="row">
-        <h1 style="text-align: center">Create a New Campground</h1>
+        <h1 style="text-align: center">Create a New Goal</h1>
         <div style="width: 30%; margin: 25px auto;">
             <form action="/campgrounds" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
@@ -14,7 +14,7 @@
                     <input class="form-control" type="text" name="campground[description]" placeholder="description">
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-lg btn-primary btn-block">Submit!</button>
+                    <button class="btn btn-lg btn-primary btn-block">Let's go!</button>
                 </div>
             </form>
             <a href="/campgrounds">Go Back</a>
