--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -12,6 +12,14 @@ webkit-transition: background-image 1.5s linear;
     color: black;
 }
 
+.navbar-brand
+{
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;
+    background-image: url('https://res.cloudinary.com/dlrjbrmlg/image/upload/v1543909703/BLlogo.png');
+}
+
 .bg {
     position: absolute;
     top: 0;
