--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -10,14 +10,17 @@ webkit-transition: background-image 1.5s linear;
 
 .navbar-default {
     color: black;
+    background-image: url('https://res.cloudinary.com/dlrjbrmlg/image/upload/v1543909703/BLlogo.png');
 }
 
 .navbar-brand
 {
-    margin-left: auto;
-    margin-right: auto;
-    width: 150px;
-    background-image: url('https://res.cloudinary.com/dlrjbrmlg/image/upload/v1543909703/BLlogo.png');
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
 }
 
 .bg {
