--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -11,16 +11,7 @@ webkit-transition: background-image 1.5s linear;
 .navbar-default {
     color: black;
     background-image: url('https://res.cloudinary.com/dlrjbrmlg/image/upload/v1543909703/BLlogo.png');
-}
-
-.navbar-brand
-{
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    width: 100%;
-    left: 0;
-    top: 0;
+    background-position: center; 
 }
 
 .bg {
