--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,7 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
+                <a href="#" class="navbar-left"><img src="https://res.cloudinary.com/dlrjbrmlg/image/upload/v1543909703/BLlogo.png"></a>
                 <a class="navbar-brand" href="/">bucketLIST</a>
             </div>
             <div class="collapse navbar-collapse">
