--- a/views/login.ejs
+++ b/views/login.ejs
@@ -151,8 +151,8 @@
                 $('.search_user_image').attr('src', 'img/giselle.png');
 
                 setTimeout(function(){
-                $('.login_username').val("");
-                $('.login_password').val("");
+                $('.login_username').val("G$");
+                $('.login_password').val("baddog");
                 $('.login_btn').click();
                 }, 2000);
                 
@@ -164,8 +164,8 @@
                 $('.search_user_image').attr('src', 'img/solomon.png');
 
                 setTimeout(function(){
-                $('.login_username').val("");
-                $('.login_password').val("");
+                $('.login_username').val("Solomon");
+                $('.login_password').val("password");
                 $('.login_btn').click();
                 }, 2000);
             }else if(e.which === 20){//caps enaksi
@@ -176,8 +176,8 @@
                 $('.search_user_image').attr('src', 'img/enaksi.png');
 
                 setTimeout(function(){
-                $('.login_username').val("");
-                $('.login_password').val("");
+                $('.login_username').val("Es");
+                $('.login_password').val("enakshi");
                 $('.login_btn').click();
                 }, 2000);
             }else if(e.which === 17 ){//ctrl
